fix: header content spacing

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -3,7 +3,6 @@
   font-size: inherit;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
   gap: 8px;
   margin: 0;
@@ -25,6 +24,11 @@
   transition: border-radius 100ms ease-in-out;
 
   color: inherit;
+}
+
+.title {
+  flex-grow: 1;
+  text-align: left;
 }
 
 .containerCollapseButton {
